--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "incremental": true,
     "isolatedModules": true,
@@ -19,9 +19,10 @@
       }
     ],
     "paths": {
-      "components/*": ["components/*"],
+      "components/*": ["src/components/*"],
       "fonts/*": ["app/fonts/*"],
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"],
+      "images/*": ["public/images/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
