--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "a-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,9 +17,7 @@
     "husky": "^9.1.6",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
-    "slugify": "^1.6.6",
-    "styled-components": "^6.1.13"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
