wip: Configuration to deploy to vercel only for main branch changes

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_BASE_API_URL=https://api-url.com
 NEXT_PUBLIC_PRODUCTS_URL=https://api-url.com/products
+VERCEL_ENV=development # used to trigger the deploy on vercel when set to production (add it on vercel admin panel)
