--- a/.example.env
+++ b/.example.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_BASE_API_URL=https://api-url.com
-NEXT_PUBLIC_PRODUCTS_URL=https://api-url.com/products
-VERCEL_ENV=development # used to trigger the deploy on vercel when set to production (add it on vercel admin panel)
+NEXT_PUBLIC_PRODUCTS_URL=https://api-url.com/products # api url where we can fetch the products
+VERCEL_ENV=development/production # used to trigger the deploy on vercel when set to production (add it on vercel admin panel)
